--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <ul>
+        <li> <a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li> <a href="./recipes/macandcheese.html"> Mac And Cheese Recipe</a></li>
+        <li> <a href="./recipes/pancakes.html">Pancakes</a></li>
+    </ul>
 </body>
 </html>
