Landing Page Rework Updated the landing page to include a preview photo of the recipes aswell as a small description of each food item

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <ul>
-        <li> <a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li> <a href="./recipes/macandcheese.html"> Mac And Cheese Recipe</a></li>
-        <li> <a href="./recipes/pancakes.html">Pancakes</a></li>
-    </ul>
+    <h3><a href="./recipes/lasagna.html">Lasagna Recipe</a></h3>
+    <img src="./img/lasagna.jpeg" alt="Photo of Lasagna" height="385" width="640">
+    <p> A recipe for a beautiful lasagna thats guaranteed to be a hit at the dinner table!</p> 
+    <h3><a href="./recipes/macandcheese.html"> Mac And Cheese Recipe</a></h3> 
+    <img src="./img/macAndCheese.jpg" alt = "Photo of Mac And Cheese" height="385" width="640">
+    <p> A recipe for a delicious creamy mac and cheese.</p>
+    <h3><a href="./recipes/pancakes.html">Pancakes</a></h3>
+    <img src="./img/pancakes.jpeg" alt="Photo of Pancakes" height="385" width="640">
+    <p> A recipe for perfectly light and fluffy pancakes.</p>
+
 </body>
 </html>
