--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,60 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
+    <img src="../img/Lasagna-Page/lasagna2.webp" alt="Photo of Lasagna" height="300" width="450">
+    <h3>Description</h3>
+    <p>One of the most loved foods in the world is finally here! This is a traditional Italian Lasagna, made the Italian way with layers of slow cooked Bolognese ragu and cheese sauce. <emp>No ricotta</emp> - that's the American-Italian version. Though patience is required, it is quite straight forward to make as you will see in the recipe video!</p>
+    <h3>Ingredients</h3>
+    <h4>Lasagna Base</h4>
+    <ul>
+        <li>2 tsp olive oil</li>
+        <li>1 brown onion, finely chopped</li>
+        <li>2 garlic cloves, crushed</li>
+        <li>750g beef mince</li>
+        <li>2 400g canned diced tomatoes</li>
+        <li>125ml dry red wine</li>
+        <li>55g tomato paste</li>
+        <li>Salt & Pepper</li>
+        <li>4 lasagna sheets</li>
+        <li>55g coarsley grated cheese</li>
+    </ul>
+    <h4>Cheese Sauce</h4>
+    <ul>
+        <li>1L Milk</li>
+        <li>1 brown onion, coarsley chopped</li>
+        <li>8 fresh parsley stalks</li>
+        <li>8 whole black peppercorns</li>
+        <li>4 whole cloves</li>
+        <li>2 bay leaves</li>
+        <li>60g butter</li>
+        <li>50g plain flour</li>
+        <li>70g finely grated permesan</li>
+        <li>Pinch ground nutmeg</li>
+        <li>Salt & white pepper</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat the <strong>oil</strong> in a large frying pan over medium heat. Add the <strong>onion</strong> and <strong>garlic</strong> and cook, stirring, for 5 minutes or until <strong>onion</strong> softens. Add the <strong>mince</strong> and cook, stirring with a wooden spoon to break up any lumps, for 5 minutes or until mince changes colour. Add the <strong>tomato</strong>, <strong>wine</strong> and <strong>tomato paste</strong>, and bring to the boil. Reduce heat to low. Simmer, uncovered, stirring occasionally, for 30 minutes or until sauce thickens slightly. Remove from heat. Taste and season with <strong>salt and pepper</strong>.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepOne.jpeg" alt="Person stirring pot of lasagna meat" height="300" width="450">
+        <li>Meanwhile, to make the <strong>cheese</strong> sauce, combine the <strong>milk</strong>, <strong>onion</strong>, <strong>parsley stalks</strong>, <strong>peppercorns</strong>, <strong>cloves</strong> and <strong>bay leaves</strong> in a medium saucepan and bring to a simmer over medium heat. Remove from heat and set aside for 15 minutes to infuse.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepTwo.jpeg" alt="Person placing parsley stalks into a saucepan with lasagna cheese sauce in it" height="300" width="450">
+        <li>Strain the milk mixture through a fine sieve into a large jug. Discard solids.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepThree.jpeg" alt="Person straining milk mixture to remove solids" height="300" width="450">
+        <li>Melt the <strong>butter</strong> in a large saucepan over medium-high heat until foaming. Add the <strong>flour</strong> and cook, stirring, for 1-2 minutes or until mixture bubbles and begins to come away from the side of the pan. Remove from heat.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepFour.jpeg" alt="Person stirring buttery mixture" height="300" width="450">
+        <li>Gradually pour in half the milk, whisking constantly with a balloon whisk, until mixture is smooth. Gradually add the remaining milk, whisking until smooth and combined.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepFive.jpeg" alt="Person whisking lasagna sauce mixture in a pot" height="300" width="450">
+        <li>Place saucepan over medium-high heat and bring to the boil, stirring constantly with a wooden spoon, for 5 minutes or until sauce thickens and coats the back of the spoon. Remove from heat. Add the <strong>parmesan</strong> and stir until cheese melts. Taste and season with <strong>nutmeg</strong>, <strong>salt and white pepper</strong>.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepSix.jpeg" alt="Person mixing in added spices into cheese sauce" height="300" width="450">
+        <li>Preheat oven to 180°C. Brush a rectangular 3L (12 cup) capacity ovenproof dish with <strong>oil</strong> to lightly grease. Spread one-quarter of the bechamel sauce over the base of the prepared dish. Arrange 1 lasagne <strong>sheet</strong> over the sauce. Top with one-third of the mince mixture and one-third of the remaining bechamel sauce. Continue layering with the remaining lasagne sheets, mince mixture and bechamel, finishing with a layer of bechamel. Sprinkle with mozzarella. Place on a baking tray. Bake in preheated oven for 40 minutes or until cheese melts, is golden brown, and the edges are bubbling. Remove from oven and set aside for 10 minutes to set.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepSeven.webp" alt="Person spreading sauce onto the lasanga base" height="300" width="450">
+        <li>Cut the lasagne into 8 portions and serve with <strong>mixed salad leaves</strong>.</li>
+        <img src="../img/Lasagna-Page/lasagnaStepEight.jpeg" alt="Nice cooked lasagna" height="300" width="450">
+    </ol>
+    <h4>Did you enjoy this recipe? Check out our others, or return <a href="../index.html">home</a></h4>
+    <ul>
+        <li><a href="./macAndCheese.html">Mac and Cheese</a></li>
+        <li><a href="./pancakes.html">Pancakes</a></li>
+    </ul>
 </body>
 </html>
