--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Macaroni and Cheese Recipe</title>
+    <title>Mac and Cheese Recipe</title>
 </head>
 <body>
-    <h1> Macaroni and Cheese Recipe</h1>
+    <h1> Mac and Cheese Recipe</h1>
+    <img src="../img/macAndCheese-Page/macAndCheese.webp" alt="Photo of Mac and Cheese" height="300" width="450">
+    <h3> Description</h3>
+    <p> Looking for a homemade alternative to boxed mac and cheese that's just as quick and easy? This stovetop mac and cheese uses staple ingredients and comes together in just 25 minutes. You'll want to bookmark this recipe for busy weeknights. The good news is, it's so simple that once you make it a couple times, you'll likely have it memorized.</p>
+    <h3> Ingredients</h3>
+    <ul>
+        <li>1 box elbow macaroni</li>
+        <li>1/4 cup butter</li>
+        <li>1/4 cup all-purpose flour</li>
+        <li>1/2 teaspoon salt</li>
+        <li>ground black pepper to taste</li>
+        <li>2 cups milk</li>
+        <li>2 cups shredded cheddar cheese</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepOne.webp" alt="Boiling pot with macaroni in it" height="300" width="450">
+        <li>At the same time, melt butter in a saucepan over medium heat.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepTwo.webp" alt="Skillet with butter melting in it" height="300" width="450">
+        <li>Add flour, salt, and pepper and stir until smooth, about 5 minutes.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepThree.webp" alt="Whisk stirring skillet with butter and whats added" height="300" width="450">
+        <li>Pour in milk slowly, while stirring continuously. Continue to cook and stir until mixture is smooth and bubbling, about 5 minutes, making sure the milk doesn't burn.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepFour.webp" alt="Adding milk to butter mixture" height="300" width="450">
+        <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepFive.webp" alt="Adding cheddar cheese to butter mixture" height="300" width="450">
+        <li>Drain macaroni and fold into cheese sauce until coated.</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepSix.webp" alt="Adding macaroni into the butter mixture" height="300" width="450">
+        <li>Serve hot and enjoy!</li>
+        <img src="../img/macAndCheese-Page/macAndCheeseStepSeven.webp" alt="Finished mac and cheese" height="300" width="450">
+    </ol>
+    <h4>Did you enjoy this recipe? Check out our others, or return <a href="../index.html">home</a></h4>
+    <ul>
+        <li><a href="./lasagna.html">Lasagna</a></li>
+        <li><a href="./pancakes.html">Pancakes</a></li>
+    </ul>
 </body>
 </html>
