Pancakes Recipe Added pancake recipe onto site

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,5 +7,32 @@
 </head>
 <body>
     <h1>Pancakes Recipe</h1>
+    <img src="../img/pancakes-Page/pancakes.jpeg" alt="Finished pancakes" height="300" width="450">
+    <h3>Description</h3>
+    <p>This is our flippin' fantastic, famous pancake recipe from taste member, 'bdittmann88', who submitted the recipe over a decade ago. Since then, it’s become one of our most popular recipes of all time with so many of our reviewers declaring it “the best pancake recipe they’ve ever had.”</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 eggs</li>
+        <li>1 3/4 cup milk</li>
+        <li>1 tsp vanilla essence</li>
+        <li>2 cups self raising flour</li>
+        <li>1/3 cup caster sugar</li>
+        <li>Butter for frying plus extra to serve</li>
+        <li>Maple syrup to serve</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Whisk <strong>eggs</strong>, <strong>milk</strong> and <strong>vanilla</strong> together in a jug. Sift <strong>flour</strong> into a large bowl. Stir in <strong>sugar</strong>. Make a well in the centre. Add milk mixture. Whisk until just combined.</li>
+        <img src="../img/pancakes-Page/pancakesStepOne.jpg" alt="Person whisking ingredients together in bowl" height="300" width="450">
+        <li>Heat a large non-stick frying pan over medium heat. Grease pan with <strong>butter</strong> or spray with cooking oil. Using 1/4 cup mixture per pancake, cook 2 pancakes for 2 minutes or until bubbles appear on surface. Turn and cook for a further 1-2 minutes or until cooked through. Transfer to a plate. Cover loosely with foil to keep warm. Repeat with remaining mixture, greasing pan with butter or cooking oil between batches.</li>
+        <img src="../img/pancakes-Page/pancakesStepTwo.jpeg" alt="Pancake forming bubbles in a skillet" height="300" width="450">
+        <li>Serve with <strong>maple syrup</strong> and extra butter.</li>
+        <img src="../img/pancakes-Page/pancakesStepThree.jpeg" alt="Pancake with maple syrup dripping off of it" height="300" width="450">
+    </ol>
+    <h4>Did you enjoy this recipe? Check out our others, or return <a href="../index.html">home</a></h4>
+    <ul>
+        <li><a href="./lasagna.html">Lasagna</a></li>
+        <li><a href="./macAndCheese.html">Mac and Cheese</a></li>
+    </ul>
 </body>
 </html>
